<?xml version="1.0"?>
<package format="2">
  <name>scale_truck_control_msgs</name>
  <version>0.0.1</version>
  <description>Custom messages for https://github.com/SuneelFreimuth/scale_truck_control</description>
  <maintainer email="suneelfreimuth1@gmail.com">Suneel Freimuth</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
